--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="preconnect" href="https://api.themoviedb.org">
+  <link rel="preconnect" href="https://image.tmdb.org">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https://api.themoviedb.org https://image.tmdb.org https://generativelanguage.googleapis.com; img-src 'self' data: https://image.tmdb.org http://localhost:5000 https://srmdb.vercel.app; connect-src 'self' http://localhost:5000 https://api.themoviedb.org https://generativelanguage.googleapis.com https://srmdb-backend.onrender.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' 'unsafe-eval';" />
+    content="default-src 'self' https://api.themoviedb.org https://image.tmdb.org https://generativelanguage.googleapis.com; img-src 'self' data: https://image.tmdb.org http://localhost:5000 https://srmdb.vercel.app; connect-src 'self' http://localhost:5000 https://api.themoviedb.org https://generativelanguage.googleapis.com https://srmdb-backend.onrender.com https://srmdb.onrender.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' 'unsafe-eval';" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
