--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https://api.themoviedb.org https://image.tmdb.org https://generativelanguage.googleapis.com; img-src 'self' data: https://image.tmdb.org http://localhost:5000 https://srmdb.vercel.app; connect-src 'self' http://localhost:5000 https://api.themoviedb.org https://generativelanguage.googleapis.com https://srmdb-backend.onrender.com https://srmdb.onrender.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' 'unsafe-eval';" />
+    content="default-src 'self' https://api.themoviedb.org https://image.tmdb.org https://generativelanguage.googleapis.com; frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com; img-src 'self' data: https://image.tmdb.org http://localhost:5000 https://srmdb.vercel.app; connect-src 'self' http://localhost:5000 https://api.themoviedb.org https://generativelanguage.googleapis.com https://srmdb-backend.onrender.com https://srmdb.onrender.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' 'unsafe-eval';" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
